# claude-skills

./: .gitignore  ANALYSIS-COMPLETE.txt  CLAUDE.md  OBSIDIAN-MCP-ALTERNATIVES.md  OBSIDIAN-MCP-DECISION-MATRIX.md  OBSIDIAN-MCP-EVALUATION.md  OUTPUT_FRAMEWORK.md  README-SHOPIFY-ANALYSIS.md  SHOPIFY-DECISION.md  SHOPIFY-RECOMMENDATION.txt  SHOPIFY-RESEARCH-INDEX.md  SHOPIFY_DECISION.md  SYNC_GUIDE.md  adobe-photoshop.skill  ascii-art.skill  claude-md-optimizer.skill  codebase-simplify.skill  creative-director-unhinged.skill  dutch-rewriter.skill  epc-qr.skill  full-optimize.skill  git.skill  gpt52-prompt.skill  install-codex-skills-interactive.sh  install-skill.sh  iterm2.skill  justfile.skill  logo-creator.skill  mathematical-logo-creator.skill  mcp-agent-router.skill  mcpick-plus.skill  message-rewriter.skill  prompt-crafter.skill  prompt.skill  session-search.skill  sheet-cms.skill  shopify-adoption-summary.md  shopify-alternatives-comparison.md  shopify-analysis.md  shopify-detailed-comparison.md  (+13 more)
.claude/: settings.json  skill-usage.db
.history-analysis/: categorized_messages.json  message_index.json  nas_cron_findings.json  user_messages.json
.repomap.tags.cache.v1/: cache.db
.session-search/: context_messages.json  search_index.json  timeline.txt
adobe-photoshop/: SKILL.md
animation-easing/: SKILL.md
ascii-art/: SKILL.md
audio-effects/: SKILL.md
backup_2024_12_12/: raycast-snippets.skill  telegram.skill
blender/: SKILL.md
blog-writer/: SKILL.md
browser-automation/: SKILL.md
epc-qr/: SKILL.md
pixi/default/: main.py  pyproject.toml  voice.py
(+390 files in other folders)
