[project]
name = "maya1-tts"
version = "0.1.0"
description = "Maya1 text-to-speech FastAPI server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.5.0",
    "transformers>=4.57.0",
    "accelerate>=1.10.0",
    "snac>=1.2.1",
    "soundfile>=0.13.0",
    "numpy>=2.1.0",
    "fastapi>=0.119.0",
    "uvicorn[standard]>=0.38.0",
    "pydantic>=2.12.0",
    "python-dotenv>=1.1.0",
    "huggingface-hub>=0.35.0",
]
